--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 <body>
 
 <nav>
-    <a href="https://andrias.fo">Home</a>
+    <a href="https://andrias.fo">english</a>
     <a href="https://andrias.fo/shop">Shop</a>
-    <a href="https://youtube.com/@AndriasAndersen">YouTube</a>
+    <a href="https://andrias.fo/fo">foroyskd</a>
 </nav>
 
 <div class="container">
