--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+Here’s your updated and polished website code. I’ve made it look more professional, fixed spelling/grammar, improved line structure, added content, moved the Shop button and added a YouTube button in the footer. I’ve also rephrased the welcome text and added more context to make it sound more personal and unique—not AI-generated.
+
+⸻
+
+Improved HTML Code:
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +12,6 @@
     <title>Andrias.FO</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Basic styling for the homepage */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -36,35 +41,19 @@
 
         .container {
             text-align: center;
-            padding: 40px 20px;
+            padding: 60px 20px;
         }
 
         h1 {
             font-size: 3em;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
 
         p {
             font-size: 1.2em;
-            color: #666;
-        }
-
-        .store-button {
-            display: inline-block;
-            margin: 30px 0;
-            padding: 15px 30px;
-            font-size: 1.5em;
-            color: #fff;
-            background: #d9534f;
-            text-decoration: none;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background 0.3s, transform 0.1s;
-        }
-
-        .store-button:hover {
-            background: #c9302c;
-            transform: translateY(-2px);
+            color: #555;
+            max-width: 700px;
+            margin: 0 auto 40px;
         }
 
         .youtube-feed {
@@ -78,21 +67,53 @@
             font-size: 2em;
             margin-bottom: 20px;
         }
+
+        footer {
+            background: #222;
+            color: #fff;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .footer-buttons a {
+            display: inline-block;
+            margin: 10px;
+            padding: 12px 24px;
+            font-size: 1.2em;
+            color: #fff;
+            background: #d9534f;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background 0.3s ease, transform 0.2s ease;
+        }
+
+        .footer-buttons a:hover {
+            background: #c9302c;
+            transform: translateY(-2px);
+        }
+
+        .footer-links {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #aaa;
+        }
     </style>
 </head>
 <body>
 
 <nav>
-    <a href="https://andrias.fo">english</a>
+    <a href="https://andrias.fo">English</a>
     <a href="https://andrias.fo/shop">Shop</a>
-    <a href="https://andrias.fo/fo">foroyskd</a>
+    <a href="https://andrias.fo/fo">Føroyskt</a>
 </nav>
 
 <div class="container">
-    <h1>Welcome</h1>
-    <p>Welcome to my website I make music… thats about it.</p>
-
-    <a class="store-button" href="https://andrias.fo/shop">Shop</a>
+    <h1>Welcome to Andrias.FO</h1>
+    <p>
+        Hey! I'm Andrias, and I make music that blends electronic vibes with raw emotion.
+        This is the official hub for my latest projects, music releases, and exclusive merch.
+        Whether you're a long-time listener or just discovering my work—thanks for stopping by!
+    </p>
 
     <div class="youtube-feed">
         <h2>Latest Videos from Porolise</h2>
@@ -107,5 +128,27 @@
     </div>
 </div>
 
+<footer>
+    <div class="footer-buttons">
+        <a href="https://andrias.fo/shop">Visit the Shop</a>
+        <a href="https://www.youtube.com/@Porolise" target="_blank">YouTube Channel</a>
+    </div>
+    <div class="footer-links">
+        &copy; 2025 Andrias.FO. All rights reserved. | Designed by Andrias
+    </div>
+</footer>
+
 </body>
 </html>
+
+
+⸻
+
+Highlights of What’s Changed:
+	•	Rewritten intro to sound more authentic and personal.
+	•	Moved and styled the “Shop” button in the footer.
+	•	Added a YouTube channel button.
+	•	Grammar, punctuation, and wording fixes throughout.
+	•	Footer with copyright.
+
+Would you like help styling this further with external CSS or adding animations/interactivity?
