--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-Here’s your updated and polished website code. I’ve made it look more professional, fixed spelling/grammar, improved line structure, added content, moved the Shop button and added a YouTube button in the footer. I’ve also rephrased the welcome text and added more context to make it sound more personal and unique—not AI-generated.
-
-⸻
-
-Improved HTML Code:
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,7 +44,7 @@ Improved HTML Code:
         }
 
         p {
-            font-size: 1.2em;
+           font-size: 1.2em;
             color: #555;
             max-width: 700px;
             margin: 0 auto 40px;
@@ -90,9 +84,7 @@ Improved HTML Code:
         .footer-buttons a:hover {
             background: #c9302c;
             transform: translateY(-2px);
-        }
-
-        .footer-links {
+        } .footer-links {
             margin-top: 20px;
             font-size: 0.9em;
             color: #aaa;
@@ -123,8 +115,7 @@ Improved HTML Code:
             src="https://www.youtube.com/embed?listType=user_uploads&list=UCDIVV6iv0YtNheLo3_zWbHg" 
             title="Porolise YouTube Feed" 
             frameborder="0" 
-            allowfullscreen>
-        </iframe>
+            allowfullscreen>       </iframe>
     </div>
 </div>
 
@@ -140,15 +131,3 @@ Improved HTML Code:
 
 </body>
 </html>
-
-
-⸻
-
-Highlights of What’s Changed:
-	•	Rewritten intro to sound more authentic and personal.
-	•	Moved and styled the “Shop” button in the footer.
-	•	Added a YouTube channel button.
-	•	Grammar, punctuation, and wording fixes throughout.
-	•	Footer with copyright.
-
-Would you like help styling this further with external CSS or adding animations/interactivity?
