--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h2>Listen to the Music</h2>
     <select id="songSelector">
         <option value="">-- Select a Song --</option>
-        <option value="music/song1.mp3">Midnight Echo</option>
+        <option value="music/https://raw.githubusercontent.com/playssoc/andrias-music-files/21b16f20a934c07d55f8fa8feb00749ffd37e426/tracks/01-candle%20life.mp3">Candle life</option>
         <option value="music/song2.mp3">Neon Waves</option>
         <option value="music/song3.mp3">Fading Light</option>
     </select>
