--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <div class="container">
     <h1>Welcome to Andrias.FO</h1>
     <p>
-        Hey! I'm Andrias, and I make music that blends electronic vibes with raw emotion.
+        Hey! I'm Andrias, and I make music that blends electronic music with pretty much anything.
         This is the official hub for my latest projects, music releases, and exclusive merch.
         Whether you're a long-time listener or just discovering my work—thanks for stopping by!
     </p>
@@ -126,7 +126,7 @@
     <select id="songSelector">
         <option value="">-- Select a Song --</option>
         <option value="music/01-candle life.mp3">Candle life</option>
-        <option value="music/song2.mp3">Neon Waves</option>
+        <option value="music/02-Violins.mp3">Violins</option>
         <option value="music/song3.mp3">Fading Light</option>
     </select>
     <audio id="audioPlayer" controls style="display: none;"></audio>
@@ -135,7 +135,7 @@
 <footer>
     <div class="footer-buttons">
         <a href="https://andrias.fo/shop">Visit the Shop</a>
-        <a href="https://www.youtube.com/@Porolise" target="_blank">YouTube Channel</a>
+        <a href="https://www.youtube.com/@AndriasAndersen" target="_blank">YouTube Channel</a>
     </div>
     <div class="footer-links">
         &copy; 2025 Andrias.FO. All rights reserved. | Designed by Andrias
