--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
         <option value="">-- Select a Song --</option>
         <option value="music/01-candle life.mp3">Candle life</option>
         <option value="music/02-Violins.mp3">Violins</option>
-        <option value="music/song3.mp3">Fading Light</option>
+        <option value="music/03-Moving-along.mp3">Moving along</option>
+        <option value="music/04-Stride.mp3">Stride</option>
+        <option value="music/05-London-Criminal.mp3">London Criminal</option>
+        <option value="music/06-Elysium.mp3">Elysium</option>
+        <option value="music/07-Reference.mp3">Reference</option>
     </select>
     <audio id="audioPlayer" controls style="display: none;"></audio>
 </div>
