--- a/index.html
+++ b/index.html
@@ -115,6 +115,169 @@
 <div class="container">
     <h1>Welcome to Andrias.FO</h1>
     <p>
+This is the official hub for my latest projects, music releases, and exclusive merch.
+        Whether you're a long-time listener or just discovering my work—thanks for stopping by!
+    </p>
+</div>
+
+<div class="music-section">
+    <h2>Listen to the Music</h2>
+    <select id="songSelector">
+        <option value="">-- Select a Song --</option>
+        <option value="music/01-candle life.mp3">Candle life</option>
+        <option value="music/02-Violins.mp3">Violins</option>
+        <option value="music/03-Moving-along.mp3">Moving along</option>
+        <option value="music/04-Stride.mp3">Stride</option>
+        <option value="music/05-London-Criminal.mp3">London Criminal</option>
+        <option value="music/06-Elysium.mp3">Elysium</option>
+        <option value="music/07-Reference.mp3">Reference</option>
+    </select>
+    <audio id="audioPlayer" controls style="display: none;"></audio>
+</div>
+
+<footer>
+    <div class="footer-buttons">
+        <a href="https://andrias.fo/shop">Visit the Shop</a>
+        <a href="https://www.youtube.com/@AndriasAndersen" target="_blank">YouTube Channel</a>
+    </div>
+    <div class="footer-links">
+        &copy; 2025 Andrias.FO. All rights reserved. | Designed by Andrias
+    </div>
+</footer>
+
+<script>
+    const selector = document.getElementById('songSelector');
+    const player = document.getElementById('audioPlayer');
+
+    selector.addEventListener('change', function () {
+        if (this.value) {
+            player.src = this.value;
+            player.style.display = 'block';
+            player.play();
+        } else { player.pause();
+            player.style.display = 'none';
+        }
+    });
+</script>
+
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andrias.FO</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f9f9f9;
+            color: #333;
+        }
+
+        nav {
+            background: #333;
+            padding: 1em 0;
+            text-align: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 0.5em 1em;
+            margin: 0 10px;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            background: #555;
+            border-radius: 5px;
+        }
+
+        .container {
+            text-align: center;
+            padding: 60px 20px;
+        }
+
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        p {
+           font-size: 1.2em;
+            color: #555;
+            max-width: 700px;
+            margin: 0 auto 40px;
+        }
+
+        .music-section {
+            background: #fff;
+            padding: 40px 20px;
+            border-top: 2px solid #ccc;
+        }
+
+        h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+
+        select {
+            padding: 10px;
+            font-size: 1em;
+            margin-bottom: 20px;
+        }
+
+        audio {
+            display: block;
+            margin: 0 auto;
+            width: 300px;
+            margin-top: 20px;
+        }
+
+        footer {
+            background: #222;
+            color: #fff;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .footer-buttons a {
+            display: inline-block;
+            margin: 10px;
+            padding: 12px 24px;
+            font-size: 1.2em;
+            color: #fff;
+            background: #d9534f;
+            text-decoration: none; border-radius: 8px;
+            transition: background 0.3s ease, transform 0.2s ease;
+        }
+
+        .footer-buttons a:hover {
+            background: #c9302c;
+            transform: translateY(-2px);
+        }
+
+        .footer-links {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #aaa;
+        }
+    </style>
+</head>
+<body>
+
+<nav>
+    <a href="https://andrias.fo">English</a>
+    <a href="https://andrias.fo/shop">Shop</a>
+    <a href="https://andrias.fo/fo">Føroyskt</a>
+</nav>
+
+<div class="container">
+    <h1>Welcome to Andrias.FO</h1>
+    <p>
         Hey! I'm Andrias, and I make music that blends electronic music with pretty much anything.
         This is the official hub for my latest projects, music releases, and exclusive merch.
         Whether you're a long-time listener or just discovering my work—thanks for stopping by!
