--- a/shop.html
+++ b/shop.html
@@ -1,275 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Andrias.FO</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
-    nav {
-      background: #333;
-      padding: 1em 2em;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .lang-switch {
-      position: relative;
-    }
-    .lang-toggle {
-      background: none;
-      border: none;
-      color: #fff;
-      font-weight: bold;
-      font-size: 1em;
-      cursor: pointer;
-    }
-    .lang-toggle img {
-      vertical-align: middle;
-      width: 20px;
-      height: 20px;
-      margin-right: 5px;
-    }
-    .lang-options {
-      display: none;
-      position: absolute;
-      top: 120%;
-      left: 0;
-      background: #444;
-      border-radius: 5px;
-      overflow: hidden;
-      z-index: 999;
-    }
-    .lang-options button {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      border: none;
-      background: #444;
-      color: #fff;
-      text-align: left;
-      cursor: pointer;
-    }
-    .lang-options button:hover {
-      background: #555;
-    }
-    nav a {
-      color: #fff; text-decoration: none;
-      padding: 0.5em 1em; font-weight: bold;
-    }
-    nav a:hover { background: #555; border-radius: 5px; }
-
-    .container { text-align: center; padding: 60px 20px; }
-    h1 { font-size: 3em; margin-bottom: 20px; }
-    p { font-size: 1.2em; color: #555; max-width: 700px; margin: 0 auto 40px; }
-
-    .music-section {
-      background: #fff; padding: 40px 20px; border-top: 2px solid #ccc;
-    }
-    h2 { font-size: 2em; margin-bottom: 20px; }
-    select { padding: 10px; font-size: 1em; margin-bottom: 20px; }
-    audio {
-      display: block; margin: 0 auto; width: 300px; margin-top: 20px;
-    }
-
-    footer {
-      background: #222; color: #fff; padding: 40px 20px; text-align: center;
-    }
-    .footer-buttons a, .footer-buttons button {
-      display: inline-block; margin: 10px; padding: 12px 24px;
-      font-size: 1.2em; color: #fff; background: #d9534f;
-      text-decoration: none; border-radius: 8px; border: none;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
-    .footer-buttons a:hover, .footer-buttons button:hover {
-      background: #c9302c; transform: translateY(-2px);
-    }
-    .footer-links { margin-top: 20px; font-size: 0.9em; color: #aaa; }
-
-    dialog::backdrop { background: rgba(0,0,0,0.5); }
-    dialog {
-      border: none;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 600px;
-      padding: 30px 20px;
-      box-shadow: 0 0 30px rgba(0,0,0,0.3);
-    }
-    .popup { margin-top: 20px; background: #fee; padding: 10px; border-radius: 6px; }
-    .popup label { display: block; margin: 10px 0; }
-  </style>
 </head>
 <body>
-<nav>
-  <a href="https://www.youtube.com/@AndriasAndersen" target="_blank">YouTube</a>
-  <div class="lang-switch">
-    <button class="lang-toggle" aria-label="Select language, English is selected" onclick="toggleLangMenu()">
-      <img id="langFlag" src="https://flagcdn.com/gb.svg" alt="Language Flag" />
-      <span id="langText">English</span>
-    </button>
-    <div class="lang-options" id="langOptions">
-      <button onclick="setLanguage('en')">English</button>
-      <button onclick="setLanguage('fo')">Føroyskt</button>
-    </div>
-  </div>
-</nav>
-
-<div class="container">
-  <h1 data-en="Welcome to Andrias.FO" data-fo="Vælkomin til Andrias.FO">Welcome to Andrias.FO</h1>
-  <p data-en="This is the official hub for my latest projects, music releases, and exclusive merch. Whether you're a long-time listener or just discovering my work—thanks for stopping by!"
-     data-fo="Hetta er offisiela síða mín fyri nýggjastu verkætlanirnar, tónleikaútgávur og serligar vørur. Takk fyri at tú vitjaði—vælkomin, um tú ert trúfastur lurtari ella nýggjur áhoyrari!">
-    This is the official hub for my latest projects, music releases, and exclusive merch. Whether you're a long-time listener or just discovering my work—thanks for stopping by!
-  </p>
-</div>
-
-<div class="music-section">
-  <h2 data-en="Listen to the Music" data-fo="Lurta eftir tónleikinum">Listen to the Music</h2>
-  <select id="songSelector">
-    <option value="">-- Select a Song --</option>
-    <option value="music/01-candle life.mp3">Candle life</option>
-    <option value="music/02-Violins.mp3">Violins</option>
-    <option value="music/03-Moving-along.mp3">Moving along</option>
-    <option value="music/04-Stride.mp3">Stride</option>
-    <option value="music/05-London-Criminal.mp3">London Criminal</option>
-    <option value="music/06-Elysium.mp3">Elysium</option>
-    <option value="music/07-Reference.mp3">Reference</option>
-  </select>
-  <audio id="audioPlayer" controls style="display: none;"></audio>
-</div>
-
-<footer>
-  <div class="footer-buttons">
-    <button onclick="document.getElementById('shopModal').showModal()" data-en="Visit the Shop" data-fo="Vitja Handilin">Visit the Shop</button>
-  </div>
-  <div class="footer-links" data-en="&copy; 2025 Andrias.FO. All rights reserved. | Designed by Andrias"
-       data-fo="&copy; 2025 Andrias.FO. Øll rættindi varðveitt. | Sniðgivið av Andrias">
-    &copy; 2025 Andrias.FO. All rights reserved. | Designed by Andrias
-  </div>
-</footer>
-
-<dialog id="shopModal">
-  <h2>Buy WAV Downloads</h2>
-  <!-- SHOP FORM GOES HERE -->
-  <form id="paypalForm" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
-    <label>Select Album ($5):</label>
-    <select id="albumSelect" onchange="handleAlbumChange()">
-      <option value="none">-- None --</option>
-      <option value="Producer Playground">Producer Playground</option>
-    </select>
-
-    <label>Or select a song ($1.50):</label>
-    <select id="songSelect" name="item_name">
-      <option value="">-- Select a Song --</option>
-      <option value="Candle life">Candle life</option>
-      <option value="Violins">Violins</option>
-      <option value="Moving along">Moving along</option>
-      <option value="Stride">Stride</option>
-      <option value="London Criminal">London Criminal</option>
-      <option value="Elysium">Elysium</option>
-      <option value="Reference">Reference</option>
-    </select>
-
-    <p id="priceDisplay">Price: $1.50</p>
-
-    <input type="hidden" name="cmd" value="_xclick" />
-    <input type="hidden" name="business" value="andriaserikkiher@gmail.com" />
-    <input type="hidden" id="itemName" name="item_name" />
-    <input type="hidden" id="amount" name="amount" />
-    <input type="hidden" id="returnURL" name="return" value="https://porolise.com/thankyou" />
-    <input type="hidden" name="rm" value="2" />
-
-    <input type="button" value="Buy Now" onclick="showPopup()" />
-  </form>
-
-  <div class="popup" id="popup" style="display:none;">
-    <strong>Important!</strong>
-    <p>Make sure to click 'Return to Merchant' after payment.</p>
-    <label><input type="checkbox" id="confirmCheckbox" onchange="toggleContinue()" />
-      I understand I must click return to access my download.</label>
-    <br>
-    <button onclick="closePopup()">Cancel</button>
-    <button id="continueButton" onclick="submitForm()" disabled>Confirm and Continue</button>
-  </div>
-  <button onclick="document.getElementById('shopModal').close()">Close Shop</button>
-</dialog>
-
+<!-- Placeholder content -->
 <script>
-  function toggleLangMenu() {
-    const menu = document.getElementById("langOptions");
-    menu.style.display = menu.style.display === "block" ? "none" : "block";
-  }
-
-  function setLanguage(lang) {
-    document.querySelectorAll('[data-en]').forEach(el => {
-      el.innerHTML = el.dataset[lang];
-    });
-    const flag = document.getElementById("langFlag");
-    const label = document.getElementById("langText");
-    flag.src = lang === "fo" ? "https://flagcdn.com/fo.svg" : "https://flagcdn.com/gb.svg";
-    label.textContent = lang === "fo" ? "Føroyskt" : "English";
-    document.querySelector(".lang-toggle").setAttribute("aria-label", `Select language, ${label.textContent} is selected`);
-    // Apply language to dynamic elements in shop form
-    document.querySelectorAll('[data-en]').forEach(el => {
-      el.innerHTML = el.dataset[lang];
-    });
-    document.querySelectorAll('option').forEach(el => {
-      if (el.dataset && el.dataset[lang]) {
-        el.textContent = el.dataset[lang];
-      }
-    });
-
-    localStorage.setItem('language', lang);
-  }
-
-  function handleAlbumChange() {
-    const album = document.getElementById('albumSelect').value;
-    const songSelect = document.getElementById('songSelect');
-    const itemName = document.getElementById('itemName');
-    const amount = document.getElementById('amount');
-    const returnField = document.getElementById('returnURL');
-    const priceDisplay = document.getElementById('priceDisplay');
-
-    if (album !== 'none') {
-      songSelect.disabled = true;
-      songSelect.value = '';
-      itemName.value = album;
-      amount.value = '5.00';
-      priceDisplay.textContent = 'Price: $5.00';
-    } else {
-      songSelect.disabled = false;
-      const selectedSong = songSelect.value;
-      itemName.value = selectedSong;
-      amount.value = '1.50';
-      priceDisplay.textContent = 'Price: $1.50';
-    }
-  }
-
-  function showPopup() {
-    const item = document.getElementById('itemName').value;
-    if (!item) return alert("Please select an album or song.");
-    document.getElementById('popup').style.display = "block";
-  }
-
-  function closePopup() {
-    document.getElementById('popup').style.display = "none";
-  }
-
-  function toggleContinue() {
-    const checkbox = document.getElementById("confirmCheckbox");
-    const button = document.getElementById("continueButton");
-    if (checkbox.checked) {
-      button.disabled = false;
-      button.innerText = "Continue to Payment";
-    } else {
-      button.disabled = true;
-      button.innerText = "Confirm and Continue";
-    }
-  }
-
-  function submitForm() {
-    document.getElementById('paypalForm').submit();
-  }
 
   window.addEventListener('DOMContentLoaded', () => {
     const savedLang = localStorage.getItem('language') || (navigator.language.startsWith('fo') ? 'fo' : 'en');
@@ -287,26 +25,18 @@
         player.style.display = 'none';
       }
     });
-  });
-</script>
 
-<script>
-  // Polyfill for <dialog> on older or mobile browsers
-  (function () {
-    if (typeof HTMLDialogElement === "function") return;
-    document.querySelectorAll("dialog").forEach(dialog => {
-      if (!dialog.showModal) {
-        dialog.showModal = function () {
-          dialog.setAttribute("open", "open");
-          dialog.style.display = "block";
-        };
-        dialog.close = function () {
-          dialog.removeAttribute("open");
-          dialog.style.display = "none";
-        };
+    // Re-translate all shop elements on load
+    document.querySelectorAll('[data-en]').forEach(el => {
+      el.innerHTML = el.dataset[savedLang];
+    });
+    document.querySelectorAll('option').forEach(el => {
+      if (el.dataset && el.dataset[savedLang]) {
+        el.textContent = el.dataset[savedLang];
       }
     });
-  })();
+  });
+
 </script>
 </body>
 </html>
