--- a/downloads/pp25/6ely25.html
+++ b/downloads/pp25/6ely25.html
@@ -1,1 +1,69 @@
-liokgxhtxh
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Download for X</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      margin-top: 80px;
+      font-size: 2em;
+    }
+    p {
+      font-size: 1.1em;
+      margin: 20px;
+    }
+    .buttons {
+      margin-top: 40px;
+    }
+    .btn {
+      display: inline-block;
+      background-color: #fff;
+      color: #000;
+      text-decoration: none;
+      padding: 15px 30px;
+      margin: 10px;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background 0.3s, color 0.3s;
+    }
+    .btn:hover {
+      background-color: #444;
+      color: #fff;
+    }
+    footer {
+      margin-top: 60px;
+      font-size: 0.9em;
+      color: #ccc;
+    }
+    footer a {
+      color: #fff;
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Download for Elysium</h1>
+  <p>Hi, thanks for buying a song from me, I really appreciate it.</p>
+
+  <div class="buttons">
+    <a href="song.mp3" class="btn" download>Download MP3</a>
+    <a href="song.wav" class="btn" download>Download WAV</a>
+  </div>
+
+  <footer>
+    If there is any problem please contact me in my Discord server
+    <a href="https://discord.gg/YOURSERVER" target="_blank">here</a>.
+  </footer>
+
+</body>
+</html>
