--- a/downloads/pp25/cl25.html
+++ b/downloads/pp25/cl25.html
@@ -56,7 +56,7 @@
   <p>Hi, thanks for buying a song from me, I really appreciate it.</p>
 
   <div class="buttons">
-    <a href="music/01-candle life.mp3" class="btn" download>Download MP3</a>
+    <a href="/music/01-candle life.mp3" class="btn" download>Download MP3</a>
     <a href="song.wav" class="btn" download>Download WAV</a>
   </div>
 
