--- a/downloads/pp25/2vi25.html
+++ b/downloads/pp25/2vi25.html
@@ -56,8 +56,8 @@
   <p>Hi, thanks for buying a song from me, I really appreciate it.</p>
 
   <div class="buttons">
-    <a href="song.mp3" class="btn" download>Download MP3</a>
-    <a href="song.wav" class="btn" download>Download WAV</a>
+    <a href="/music/violins.mp3" class="btn" download>Download MP3</a>
+    <a href="/music/violins.wav" class="btn" download>Download WAV</a>
   </div>
 
   <footer>
